Should stop zoom in on level selecter on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,8 @@ select {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 40px;
-  max-width: 90vw;
+  padding: 30px;
+  max-width: 80vw;
 }
 
 .instructions {
